--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parsh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "solc": "^0.4.24"
+  }
 }
