--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A lottery built over Ethereum",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Parsh",
   "license": "ISC",
